# DarkSky

./: .gitignore  .gitmodules  DarkSky System.drawio  README.md  package-lock.json  package.json
client/darksky-client/: README.md  package-lock.json  package.json  rebuild.sh
client/darksky-client/public/: index.html
client/darksky-client/src/: App.css  App.js  App.vue  main.js  socketio.vue
client/darksky-desktop/: UIBox.qml  build_env.sh  jbox.qml  main.py  main.qml  qmldir  requirements.txt  run_server.sh  state.py
client/darksky-desktop-kv/: build_env.sh  darksky.kv  darksky_socket.py  main.py  requirements.txt
client/darksky-desktop-kv/ui/: app.py  darksky.kv  darksky.py  skyview.kv  skyview.py
client/darksky-desktop-qt/: darksky_socket.py  requirements.txt  singleton.py  state.py
client/darksky-web/: README.md  package.json  vue.config.js
client/darksky-web/public/: data
client/darksky-web/src/: App.vue  main.js
diagrams/: DarkSky System.drawio
electrical/: rf-capacitance.xlsx
gnuradio/: fm_radio.grc  radio.py
interfaces/: motor.fbs  motor.idl
mechanical/: PI3_DarkSky rotate drive-test.gcode  PI3_DarkSky rotate drive.gcode  PI3_Darksky motor template.gcode  PI3_drive_motors.gcode  bearing hub.FCStd  bearing hub.FCStd1
mechanical/dups/: PI3_DarkSky rotate drive hub.gcode  PI3_Darksky bearing hub w: motor.gcode
motor-server/: package-lock.json  package.json  serial.js  server.js
old-python-server/: mcp_read_thread.py  packet.py  requirements.txt
pi-motor-controller/: CMakeLists.txt  darksky.cpp  darksky.hpp  led.cpp  main.cpp  motor.cpp  motor.hpp  pins.hpp
pi-pico/: CMakeLists.txt  README.md  comms.cpp  comms.hpp  darksky.cpp  led.hpp  main.cpp  motor.hpp  pins.hpp
server/: app.js  backend_socketio.py  build_env.sh  comm-packet.js  mcp_read_thread.py  mcp_serial.py  package-lock.json  package.json  packet.py  run_server.sh  server.py
server/routes/: index.js
socket-server/: backend_socketio.py  build_env.sh  gps.py  mcp_read_thread.py  mcp_serial.py  packet.py  requirements.txt  run_server.sh  server.py  state.py
socket-server-cpp/: CMakeLists.txt  dbus-test.sh  net.p-dev.test.xml  socket-server-version.hpp.in
socket-server-cpp/debuglogger/: debuglogger.cpp  debuglogger.hpp
socket-server-cpp/include/: net.pdev.test.hpp  server.hpp
socket-server-cpp/interfaces/: net.pdev.test.xml
socket-server-cpp/src/: server.cpp  socket-server.cpp
socket-server/tests/: test_coords.py
star-motor-controller/: star-motor-controller.atsln
star-motor-controller/star-motor-controller/: star-motor-controller.atsln  star-motor-controller.componentinfo.xml  star-motor-controller.cppproj  star-motor-controller.cproj
star-motor-controller/star-motor-controller/Device_Startup/: sam3xa_sram.ld  system_sam3xa.c.no
star-motor-controller/star-motor-controller/src/: asf.h  comm.c  comm.h  command_processor.c  command_processor.h  darksky.h  darksky_hooks.c  darksky_main.c  darksky_tasks.h  jsoncomm.c  leds.c  leds.h  lnb.c  lnb.h  main.c  (+2 more)
(+24 files in other folders)
